BorrowLenses_PartialSandbox/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Business_Domain__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only For Person Contact.</description>
        <label>Business Domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_Date_Time__c</fullName>
        <label>Converted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>SoftSlate Customer Id</inlineHelpText>
        <label>Customer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <formula>IF(
ISBLANK(UserName__c),&quot;Domain not Available&quot;
,
RIGHT( UserName__c , ( LEN( UserName__c ) - FIND( &quot;@&quot;, UserName__c ) ) )
)</formula>
        <label>Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Case_Acknowledgement_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Acknowledgement emails will not be sent to customers if it is marked/checked.</description>
        <inlineHelpText>Case Acknowledgement emails will not be sent to customers if it is marked/checked.</inlineHelpText>
        <label>No Case Acknowledgement Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoftSlate_Created_By__c</fullName>
        <label>SoftSlate Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoftSlate_Created_Date__c</fullName>
        <label>SoftSlate Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SoftSlate_Last_Modified_By__c</fullName>
        <label>SoftSlate Last Modified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoftSlate_Last_Modified_Date__c</fullName>
        <label>SoftSlate Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>URL_to_SoftSlate_Contact__c</fullName>
        <formula>IF(ISBLANK(Customer_Id__c),
HYPERLINK(&quot;https://admin.internal.borrowlenses.com/administrator/Order.do&quot;,&quot;SoftSlate Link&quot;),
HYPERLINK(&quot;https://admin.internal.borrowlenses.com/administrator/CustomerEditForm.do?customerID=&quot;&amp;
Customer_Id__c &amp; &quot;&amp;parentIDField=&quot;,&quot;SoftSlate Contact Link&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL to SoftSlate Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>